openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aap-mock
  labels:
    name: aap-mock
    app.kubernetes.io/name: aap-mock
    app.kubernetes.io/part-of: aap-mock
