openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: aap-mock
  namespace: aap-mock
  labels:
    app: aap-mock
    app.kubernetes.io/name: aap-mock
    app.kubernetes.io/part-of: aap-mock
spec:
  to:
    kind: Service
    name: aap-mock
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
